--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "debounce": "^1.2.0",
     "flatbush": "^3.1.0",
     "memoize-one": "^4.0.2",
     "react": "^16.6.0",
