--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "debounce": "^1.2.0",
+    "gl-matrix": "^3.0.0",
     "memoize-one": "^4.0.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0"
