--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flamechart",
+  "name": "traceviewer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,7 +14,7 @@
   "main": "./trace-lib.js",
   "scripts": {
     "start": "parcel index.html",
-    "prod": "rm docs/*; parcel build index.html --out-dir docs/ --public-url /flamechart/",
+    "prod": "rm docs/*; parcel build index.html --out-dir docs/ --public-url /traceviewer/",
     "pages": "yarn prod; git add -A; git commit -m 'update website'; git push origin master",
     "build:lib": "node ./rolluplib.js",
     "build": "babel src -d lib --plugins=@babel/plugin-proposal-object-rest-spread  --presets=@babel/preset-env"
